First copy done.
Added partials folder in views for header and footer.

--- a/views/index2.ejs
+++ b/views/index2.ejs
@@ -1,9 +1,8 @@
 <% include partials/header %>
-
     <script>
-        window.data = <%- matchesPerYear %>
+        window.data = <%- winnersPerYearObj %>
         console.log(JSON.stringify(window.data));
-        console.log((window.data));
+        //console.log((window.data));
     </script>
-    <script src="charts1.js"></script>
+    <script src="charts2.js"></script>
     <% include partials/footer %>
