--- a/views/index5.ejs
+++ b/views/index5.ejs
@@ -1,9 +1,9 @@
 <% include partials/header %>
-
     <script>
-        window.data = <%- matchesPerYear %>
+        window.data = <%- battingAverages %>
         console.log(JSON.stringify(window.data));
         console.log((window.data));
     </script>
-    <script src="charts1.js"></script>
+    <script src="charts5.js"></script>
+
     <% include partials/footer %>
