--- a/views/index4.ejs
+++ b/views/index4.ejs
@@ -1,9 +1,8 @@
 <% include partials/header %>
-
     <script>
-        window.data = <%- matchesPerYear %>
+        window.data = <%- topEconomicalBowlers %>
         console.log(JSON.stringify(window.data));
         console.log((window.data));
     </script>
-    <script src="charts1.js"></script>
+    <script src="charts4.js"></script>
     <% include partials/footer %>
