--- a/charts/style.css
+++ b/charts/style.css
@@ -1,3 +1,20 @@
 .container {
     display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: black;
+    height: 70px;
+    margin-left: none;
+    margin-right: none;
+    margin-bottom: 20px;
+    /* outline: none; */
+    /* text-decoration: none; */
+    background: black;
+}
+
+.container a {
+    padding-left: 20px;
+    padding-right: 20px;
+    color: white;
+    text-decoration: none;
 }
